welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: not found: value nbPas
nbPas=0
^Program:4: error: not found: value nbPas
  nbPas=nbPas+1
  ^Program:8: error: not found: value nbPas
for (compteur <- 1 to nbPas) {
                      ^